edit history part

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -114,9 +114,7 @@
 
                 <div id="history-text" class="grid-con">
                     <h2>ZIMA History</h2>
-                    <p class="grid-con">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu<br> 
-                        libero ut erat sodales finibus sed in dolor.Etiam iaculis, nibh a lobortis<br> 
-                        egestas, est urna sodales.</p>
+                    <p class="grid-con">Zima means "winter" in many Slavic languages. It was launched nationally<br>in the United States as Zima Clearmalt in 1993. The lemon-lime drink was<br>part of the "clear craze" of the 1990s that produced products such as Crystal<br>Pepsi and Tab Clear. Zima was described as a "truly unique alcohol beverage"<br>and used the tagline "Zomething different".</p>
                 </div>
             </div>
 
