--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <main>
             <section id="hero" class="grid">
-                <img src="images/hero_image.png" alt="Zima Drink" class="hero-image">
+                <!-- <img src="images/hero_image.png" alt="Zima Drink" class="hero-image"> -->
                 <div id="hero-con">
-                    <h2>Hype Up With ZIMA</h2>
+                    <h2>Hype Up<br>With ZIMA</h2>
                 </div>
                     <a href="#" id="shop">Shop Now</a>
                     <a href="#" id="learn">Learn More</a>
@@ -50,26 +50,27 @@
 
             <div id="main-shop" class="grid">
                 <h2>SHOP</h2>
+                <p>Zima has different fruity flavours. Get a peak of the shop page and find what you love. Enjoy!</p>
                 <div id="product1">
+                    <a href="#" class="shop-box"><h3>Original</h3></a>
                     <img src="images/desktop-product-original.jpg" alt="Zima Original">
-                    <a href="#" class="shop-box"><p>Original</p></a>
                 </div>
                 <div id="product2">
+                    <a href="#" class="shop-box1"><h3>Lemon</h3></a>
                     <img src="images/desktop-product-lemon.jpg" alt="Zima Lemon">
-                    <a href="#" class="shop-box"><p>Lemon</p></a>
                 </div>
                 <div id="product3">
+                    <a href="#" class="shop-box1"><h3>Orange</h3></a>
                     <img src="images/desktop-product-orange.jpg" alt="Zima Orange">
-                    <a href="#" class="shop-box"><p>Orange</p></a>
                 </div>
                 <div id="product4">
-                    <img src="images/desktop-product-grapefruit.jpg" alt="Zima Grapefruit">
-                    <a href="#" class="shop-box"><p>Grapefruit</p></a>
+                    <a href="#" class="shop-box"><h3>Grapefruit</h3></a>
+                    <img src="images/desktop-product-grapefruit.jpg" alt="Zima Grapefruit">  
                 </div>
-                <a href="#" id="shop-more"><h3>Shop More</h3></a>
+                <a href="#" id="shop-more"><h3>Shop Now</h3></a>
             </div>
 
-           <div id="blog-c" class="grid">
+           <div class="grid blog-c">
                 <section id="blog">
                     <h2>BLOG</h2>
                     <p>Join our blog and submit your zima memories.You might just be the next Zima star.</p>
@@ -77,19 +78,19 @@
                 <section id="party">
                     <img id="party-img" src="images/party.png" alt="Taylor's Birthday party hosted by paid for my zima">
                     <h3>Are you Our Next Winner?</h3>
-                    <p>Get a chance to get your birthday party to<br>be hosted and planned for you by zima.<br>Win a Zima Birthday.<br>Win all your bill taken care of by zima.</p>
+                    <p>Get a chance to get your birthday party to be hosted and planned for you by zima. Win a Zima Birthday. Win all your bill taken care of by zima.</p>
                 </section>
                 <div id="week">
                     <img id="week-img" src="images/kwency.png" alt="Kwency, our zima star for the week">
-                    <h3>This Week's Star</h3>
+                    <h3>This Week's Star!</h3>
                     <p>Meet our Zima Star of the week<br>as she purchases from one of<br> our zima hotspot.<br>Guess her favourite zima fruit.</p>
                 </div>
                 <a href="#" id="read"><h2>Read More</h2></a>
             </div>
             
-            <div  class="grid">
+            <div  class="grid his">
                 <section id="history">
-                    <h2>Zima History</h2>
+                    <h2>ZIMA History</h2>
                     <p>Zima means "winter" in many Slavic languages. It was launched nationally in the United States as Zima Clearmalt in 1993.<br>The lemon-lime drink was part of the "clear craze" of the 1990s that produced products such as Crystal Pepsi and Tab Clear.<br> Zima was described as a "truly unique alcohol beverage" and used the tagline "Zomething different".</p> 
                 </section>
                 
