--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2>SHOP</h2>
                 <p>Zima has different fruity flavours. Get a peak of the shop page and find what you love. Enjoy!</p>
                 <div id="product1">
-                    <a href="#" class="shop-box"><h3>Original</h3></a>
+                    <a href="#" class="shop-box-o"><h3>Original</h3></a>
                     <img src="images/desktop-product-original.jpg" alt="Zima Original">
                 </div>
                 <div id="product2">
