--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
                        <textarea name="msg" placeholder="Please tell us the details so we can better answer your question..."></textarea>
                        <h3>How would you like us to contact you?</h3>
                        <ul>
-                        <li><input id="location" type="checkbox"><span>Email</span></li>  
-                       <li><input id="location" type="checkbox"><span>Phone Call</span></li>  
+                        <li><input type="checkbox"><span>Email</span></li>  
+                       <li><input type="checkbox"><span>Phone Call</span></li>  
                        </ul>        
                        <input name="submit" type="submit" value="SUBMIT">
                    </form>
