--- a/contact_mobile.html
+++ b/contact_mobile.html
@@ -17,12 +17,27 @@
             <div id="logo">
                 <img src="images/logo-mobile.svg" alt="image">
             </div>
-
+            <nav id="main-nav">
+                <h2 class="hidden">Main Navigation</h2>
+                <input type="checkbox" id="hamburger">
+                <label for="hamburger" class="grid-con">
+                    <img src="images/menu.png" alt="hamburger menu icon">
+                </label>
+                <div id="burger-con">
+                    <ul>
+                        <li><a href="index_mobile.html">Home</a></li>
+                        <li><a href="#">Best Deals</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="contact_mobile.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
             <div>
                 <a id="search-header" href="#"><i class="fa fa-search"></i><h3>Search</h3></a>
             </div> 
 
-            <div class="openMenu"><i class="fa fa-bars"></i></div>
         </header> 
 
         <main>
